--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
-site_name: LAB-2354 - Webex Contact Center Lab Solution Use-case and APIs # This must begin with the session ID
-site_description: LAB-2354 - Webex Contact Center Lab Solution Use-case and APIs # must be same as "site_name"
+site_name: LAB-2354 - Webex Contact Center Lab&colon; Solution Use-case and APIs # This must begin with the session ID
+site_description: LAB-2354 - Webex Contact Center Lab&colon; Solution Use-case and APIs # must be same as "site_name"
 site_author: John Doe
 copyright: Copyright &copy; 2024 Cisco
 theme:
@@ -39,10 +39,10 @@ extra_css:
   - stylesheets/extra.css
 plugins:
   - search
-  - with-pdf:
-      cover_title: LABXXX-1234
-      cover_subtitle: My famous WebexOne Lab
-      cover_logo: template_assets/wx1Splash_new.gif
+  # - with-pdf:
+  #     cover_title: LABXXX-1234
+  #     cover_subtitle: My famous WebexOne Lab
+  #     cover_logo: template_assets/wx1Splash_new.gif
   - glightbox:
       touchNavigation: true
       loop: false
@@ -79,8 +79,9 @@ nav:
   - Home: index.md
   - Lab:
       - Overview: overview.md
-      - Lab 1 - Getting Started: lab1_getting_started.md
+      # - Lab 1 - Getting Started: lab1_getting_started.md
       - Lab 1 - Routing Returning Callers: lab1_returningCustomer.md
+      - Lab 2 - Last Agent Routing Using Simulated AutoCSAT: lab2_LARbasedOnCSAT.md
       - Conclusion: conclusion.md
   # - Topologies: topologies.md
   - Cheat Sheet: cheatsheet.md
