--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,9 +84,9 @@ nav:
       - Lab 1 - Routing Returning Callers: lab1_returningCustomer.md
       - Lab 2 - Last Agent Routing Using Simulated AutoCSAT: lab2_LARbasedOnCSAT.md
       - Lab 3 - Creating a Self Service Support Option in an Emergency: lab3_CreatingSelfService.md
-      # - Conclusion: conclusion.md
+      - Conclusion: conclusion.md
   # - Topologies: topologies.md
   - Cheat Sheet: cheatsheet.md
-  - Additional Resources: https://webexcc-sa.github.io
+  - Additional Resources: additionalResources.md #https://webexcc-sa.github.io
 
 
